metro-extensions/contribute/impl-compiler-plugin/src/test/resources/diagnostics/contributesrobot/classMustImplementRobot.kt
// RENDER_DIAGNOSTICS_FULL_TEXT
package com.test

import software.amazon.app.platform.inject.robot.ContributesRobot

<!CONTRIBUTES_ROBOT_ERROR, CONTRIBUTES_ROBOT_ERROR!>@ContributesRobot(Unit::class)<!>
class MissingRobot
